# loadtest

./: .gitignore  README.md  pyproject.toml
llmtest/: llmtest.py  loadtest.py  testvllm.py
llmtest/request/: BF_L_A_001.req  BF_L_B_001.req  BF_L_I_001.req  BF_M_A_001.req  BF_M_B_001.req  BF_M_I_001.req  BF_S_A_001.req  BF_S_B_001.req  BF_S_I_001.req  CD_L_A_001.req  CD_L_B_001.req  CD_L_I_001.req  CD_M_A_001.req  CD_M_B_001.req  CD_M_I_001.req  CD_S_A_001.req  CD_S_B_001.req  CD_S_I_001.req  CE_L_A_001.req  CE_L_B_001.req  CE_L_I_001.req  CE_M_A_001.req  CE_M_B_001.req  CE_M_I_001.req  CE_S_A_001.req  CE_S_B_001.req  CE_S_I_001.req  CG_L_A_001.req  CG_L_B_001.req  CG_L_I_001.req  CG_M_A_001.req  CG_M_B_001.req  CG_M_I_001.req  CG_S_A_001.req  CG_S_B_001.req  CG_S_I_001.req  CI_L_A_001.req  CI_L_B_001.req  CI_L_I_001.req  CI_M_A_001.req  (+85 more)
llmtest/request.old/: tc001.req  tc004.req  tc005.req  tc006.req  tc007.req  tc008.req  tc009.req  tc011.req  tc012.req  tc014.req  tc015.req  tc018.req  tc019.req  tc020.req  tc023.req  tc024.req  tc025.req  tc029.req  tc034.req  tc035.req  tc040.req  tc042.req  tc044.req  tc046.req  tc050.req  tc061.req  tc064.req  tc066.req  tc072.req  tc073.req  tc075.req  tc081.req  tc082.req  tc086.req  tc092.req  tc094.req  tc095.req  tc098.req  tc099.req
llmtest/response/20250526_193117/: summary.txt  tc001.res
vectordbtest/: create_collections.py  docker-compose.yml  embed_documents.py  requirements.txt  run_comparison.py  test_connection.py  vdbtest.py
vectordbtest/request/: req001.py  req002.py
(+29 files in other folders)
